# TeleScope

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.json  pyproject.toml  requirements.txt
.codex/skills/textual-builder/assets/card-game-template/: app.py
src/: app.py  client.py  get_session.py  init.py  pipeline.py  rules.py  settings.py  storage.py
src/adapters/: __init__.py  notification_formatting.py  sqlite_storage.py  telegram_bot_notifier.py  telegram_mapper.py  telegram_notifier.py
src/core/: __init__.py  config.py  dedup.py  models.py  ports.py  processor.py  rules_engine.py  source_keys.py
src/frontend/: app.py  app.tcss  constants.py  main.py  modals.py  state.py  validators.py
src/frontend/tabs/: __init__.py  account.py  data.py  guide.py  rules.py  settings.py  sources.py
tests/: test_mapper_topics.py  test_notification_formatting.py  test_processor_topic_filter.py  test_source_keys.py
